# mojo-dictionary-benchmarks

./: .gitignore  Cargo.toml  README.md  aggregate_results.py  benchmarks.sh  compact_dict.mojo  hashmap.rs  mojoproject.toml  pixi.toml  plot.py  python_dict  python_dict.mojo  stdlib_dict.mojo  stdlib_dict.py
results/: benchmarks.md
src/: ahash.rs  dict.rs  keys_container.rs
string_dict/: ahasher.mojo  dict.mojo  keys_container.mojo  string_eq.mojo
